bin/testsuite/tests/compiler/src/errors/compiler2881.swg
#global testerror "Err0316"

var #alias0 = 0
